--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=Test123$
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.database.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 
