--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=Socialize
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/socialize
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=Test123$
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL8Dialects
 
