Set up security configurations \n implemented the signup and loging APIs and refacture the file structure. \n added user Authority and impletmented jwt token creation and validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=Test123$
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+jwt.secret.length=64
+jwt.expiration=7400000
