--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.application.name=Socialize
 spring.datasource.url=jdbc:mysql://localhost:3306/socialize
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=123456789
-#spring.datasource.password=Test123$
+spring.datasource.password=Test123$
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
