--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.profiles.active=local //todo remove the below and configure profiles for production
-server.port=8080
+server.port=6060
 spring.application.name=Socialize
-spring.datasource.url=jdbc:mysql://localhost:3306/socialize
+spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_socialize
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Test123$
+spring.datasource.username=freedb_socialize
+spring.datasource.password=F$H*&hHZ7&ur!ry
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
