--- a/src/main/frontend/socialize/package.json
+++ b/src/main/frontend/socialize/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.2.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "prop-types": "^15.8.1",
@@ -27,6 +32,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "sass": "^1.77.2",
     "vite": "^5.2.0"
   }
 }
