--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.profiles.active=local //todo remove the below and configure profiles for production
-server.port=6060
+server.port=${SERVER_PORT:8080}
 spring.application.name=Socialize
-spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_socialize
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/socialize}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=freedb_socialize
-spring.datasource.password=F$H*&hHZ7&ur!ry
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:Test123$}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
