changes to the previous pull

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,9 @@ server.port=${SERVER_PORT:8080}
 spring.application.name=Socialize
 spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/socialize}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:Test123$}
+spring.datasource.username=root
+spring.datasource.password=Root123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+logging.level.root=DEBUG
