--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #spring.profiles.active=local //todo remove the below and configure profiles for production
-server.port=${SERVER_PORT:8080}
+server.port=8080
 spring.application.name=Socialize
-spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/socialize}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:Test123$}
+spring.datasource.url=jdbc:mysql://localhost:3306/socialize
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=Test123$
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
