--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:Test123$}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+##todo change the username and password
+#spring.mail.username=setusername
+#spring.mail.password=setpassword
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
