--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 server.port=${SERVER_PORT:8080}
 spring.application.name=Socialize
-spring.datasource.url=jdbc:mysql://localhost:3307/socialize
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/socialize}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:Test123$}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+##todo change the username and password
+#spring.mail.username=setusername
+#spring.mail.password=setpassword
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
