--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,14 @@ target/
 .springBeans
 .sts4-cache
 
-### properties config ###
-.properties
 
-
+### application classes to not change ###
+src/main/java/com/socialize/auth
+src/main/java/com/socialize/security
+src/main/java/com/socialize/model
+src/main/java/com/socialize/dto
+src/main/java/com/socialize/enums
+src/main/resources
 
 ### IntelliJ IDEA ###
 .idea
