--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Socialize
 spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3307/socialize}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:Test123$}
+spring.datasource.password=${DB_PASSWORD:root123}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
